# dolphin

./: CMakeLists.txt
CMake/: CheckAndAddFlag.cmake
Data/Sys/Shaders/: depth.glsl
Source/: CMakeLists.txt  dolphin-emu.sln
Source/Android/jni/: MainAndroid.cpp
Source/Core/: CMakeLists.txt
Source/Core/AudioCommon/: CMakeLists.txt  PCH.h
Source/Core/Common/: Arm64Emitter.cpp  ArmCPUDetect.cpp  BitSet.h  CMakeLists.txt  Common.vcxproj  Common.vcxproj.filters  PCH.h  WindowSystemInfo.h
Source/Core/Core/: Analytics.cpp  BootManager.cpp  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Core.cpp  Core.vcxproj  Core.vcxproj.filters  CoreTiming.cpp  Host.h  HotkeyManager.cpp  HotkeyManager.h  PCH.h
Source/Core/DiscIO/: CMakeLists.txt
Source/Core/DolphinNoGUI/: CMakeLists.txt  DolphinNoGUI.vcxproj  DolphinNoGUI.vcxproj.filters  MainNoGUI.cpp  PCH.h  Platform.h  PlatformFBDev.cpp  PlatformMacOS.mm  PlatformWayland.cpp  PlatformWin32.cpp  PlatformX11.cpp  resource.h
Source/Core/DolphinQt/: CMakeLists.txt  DolphinQt.vcxproj  Host.cpp  Host.h  MainWindow.cpp  MainWindow.h  PCH.h  RenderWidget.cpp  RenderWidget.h
Source/Core/DolphinQt2/: Host.cpp  RenderWidget.cpp
Source/Core/DolphinWX/: Frame.cpp  Frame.h  FrameTools.cpp  Globals.h  Main.cpp  VideoConfigDiag.cpp
Source/Core/InputCommon/: CMakeLists.txt
Source/Core/UICommon/: CMakeLists.txt  CommandLineParse.cpp  PCH.h
Source/Core/VideoBackends/Null/: CMakeLists.txt  NullBackend.cpp  PCH.h  Render.cpp  Render.h
Source/UnitTests/: StubHost.cpp  UnitTests.vcxproj
Source/VSProps/: Base.props
(+234 files in other folders)
